# redacted

./: README.md  colors.html  index.html  package-lock.json  package.json
.github/workflows/: release.yml
plugins/tauri-plugin-test-harness/: .gitignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js
plugins/tauri-plugin-test-harness/guest-js/: index.ts
plugins/tauri-plugin-test-harness/permissions/autogenerated/: reference.md
plugins/tauri-plugin-test-harness/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
public/: colors.html
src/: app.jsx  style.css  updater.jsx  window-controls.css  window-controls.jsx  window-creation.jsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: foundation.json
src-tauri/src/: lib.rs  main.rs
